# Medical_AI_DB_assistant

./: .gitignore  QUICK_START.md  README.md  env.template  railway.toml  start.sh
backend/: README.md  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: workflow.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: ingest.py  patients.py  rag.py  system.py
backend/app/core/: config.py  logging.py
backend/app/services/: docling_service.py  embedding_service.py  llm_service.py  patient_repository.py  persistence_service.py  supabase_client.py  vector_store.py
backend/meditrack_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md
frontend/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/app/(protected)/patients/[id]/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: patient-summary-card.tsx
frontend/lib/: api.ts  supabase.ts
frontend/tests/e2e/: basic.spec.ts
frontend/types/: index.ts
