[project]
name = "meditrack-ai-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for MediTrack AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.31.1",
    "python-multipart==0.0.9",
    "pydantic-settings==2.5.2",
    "loguru==0.7.2",
    "httpx==0.27.2",
    "supabase==2.6.0",
    "langchain==0.2.12",
    "langchain-openai==0.1.19",
    "langgraph==0.1.20",
    "docling==0.1.9",
    "sentence-transformers==3.1.1",
    "psycopg[binary,pool]==3.2.1",
    "tenacity==9.0.0",
    "orjson==3.10.7",
    "redis==5.1.1",
    "numpy==2.1.2",
    "pillow==11.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2"
]

[tool.uv]
cache-dir = ".uv"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

